Split dev and prod rollup confs

--- a/build-web-component/package.json
+++ b/build-web-component/package.json
@@ -12,7 +12,8 @@
     "rollup-plugin-babel": "^4.3.2"
   },
   "scripts": {
-    "watch": "rollup -c --watch",
+    "watch": "rollup -c rollup.dev.config.js --watch",
+    "build-dev": "rollup -c rollup.dev.config.js",
     "build": "rollup -c"
   }
 }
