Add uglify in prod build and prettier in dev

--- a/build-web-component/package.json
+++ b/build-web-component/package.json
@@ -8,13 +8,23 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "babel-preset-es2015-rollup": "^3.0.0",
+    "husky": "^1.3.1",
+    "prettier": "1.16.4",
+    "pretty-quick": "^1.10.0",
     "rollup": "^1.4.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-serve": "^1.0.1"
   },
   "scripts": {
-    "watch": "rollup -c rollup.dev.config.js --watch",
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "build:watch": "rollup -c rollup.dev.config.js --watch",
+    "prettier:check": "prettier --check \"counter/**/*.js\"",
+    "prettier:fix": "prettier --write \"counter/**/*.js\""
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
