--- a/build-web-component/package.json
+++ b/build-web-component/package.json
@@ -14,11 +14,12 @@
     "rollup": "^1.4.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-livereload": "^1.0.0",
-    "rollup-plugin-serve": "^1.0.1"
+    "rollup-plugin-serve": "^1.0.1",
+    "rollup-plugin-terser": "^4.0.4"
   },
   "scripts": {
     "build": "rollup -c",
-    "build:watch": "rollup -c rollup.dev.config.js --watch",
+    "build:watch": "rollup -c rollup.dev.config.js --sourcemap --watch",
     "prettier:check": "prettier --check \"counter/**/*.js\"",
     "prettier:fix": "prettier --write \"counter/**/*.js\""
   },
