Add polyfills for IE11

--- a/build-web-component/.babelrc
+++ b/build-web-component/.babelrc
@@ -1,5 +1,12 @@
 {
-    "presets": [
-      ["@babel/env", {"modules": false}]
+  "exclude": "node_modules/**",
+  "presets": [
+    [
+      "@babel/env",
+      {
+        "modules": false,
+        "useBuiltIns": "usage"
+      }
     ]
+  ]
 }
