--- a/build-web-component/package.json
+++ b/build-web-component/package.json
@@ -2,24 +2,27 @@
   "name": "build-web-component",
   "version": "1.0.0",
   "description": "",
-  "dependencies": {},
+  "dependencies": {
+    "@babel/polyfill": "^7.2.5",
+    "@webcomponents/webcomponentsjs": "^2.2.7"
+  },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
-    "babel-preset-es2015-rollup": "^3.0.0",
     "husky": "^1.3.1",
     "prettier": "1.16.4",
     "pretty-quick": "^1.10.0",
     "rollup": "^1.4.1",
     "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-node-resolve": "^4.0.1",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-terser": "^4.0.4"
   },
   "scripts": {
     "build": "rollup -c",
-    "build:watch": "rollup -c rollup.dev.config.js --sourcemap --watch",
+    "build:watch": "rollup -c rollup.dev.config.js",
     "prettier:check": "prettier --check \"counter/**/*.js\"",
     "prettier:fix": "prettier --write \"counter/**/*.js\""
   },
@@ -27,5 +30,9 @@
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not ie < 11"
+  ]
 }
