--- a/build-web-component/package.json
+++ b/build-web-component/package.json
@@ -10,6 +10,7 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "husky": "^1.3.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "1.16.4",
     "pretty-quick": "^1.10.0",
     "rollup": "^1.4.1",
@@ -22,9 +23,10 @@
     "rollup-plugin-terser": "^4.0.4"
   },
   "scripts": {
-    "build": "rollup -c",
-    "build:watch": "rollup -c rollup.dev.config.js --watch",
-    "build:all": "rollup -c --environment folder:counter && rollup -c --environment folder:counterV2",
+    "build": "npm-run-all --parallel build:*",
+    "build:counter": "rollup -c --environment folder:counter",
+    "build:counterV2": "rollup -c --environment folder:counterV2",
+    "start": "rollup -c rollup.dev.config.js --watch",
     "prettier:check": "prettier --check \"counter/**/*.js\"",
     "prettier:fix": "prettier --write \"counter/**/*.js\""
   },
