--- a/build-web-component/package.json
+++ b/build-web-component/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
-    "@webcomponents/webcomponentsjs": "^2.2.7"
+    "@babel/runtime": "^7.3.4",
+    "@webcomponents/webcomponentsjs": "^2.2.7",
+    "core-js": "^2.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
+    "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "husky": "^1.3.1",
     "npm-run-all": "^4.1.5",
