--- a/build-web-component/.babelrc
+++ b/build-web-component/.babelrc
@@ -2,9 +2,21 @@
   "exclude": "node_modules/**",
   "plugins": [
     [
-      "@babel/plugin-transform-runtime", {
+      "@babel/plugin-transform-runtime",{
         "corejs": false
       }
     ]
-  ]
+  ],
+  "env": {
+    "test": {
+      "presets": [
+        [
+          "@babel/preset-env",
+          {
+            "modules": "cjs"
+          }
+        ]
+      ]
+    }
+  }
 }
