--- a/build-web-component/package.json
+++ b/build-web-component/package.json
@@ -12,6 +12,7 @@
     "@babel/plugin-transform-runtime": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "husky": "^1.3.1",
+    "jest": "^24.3.1",
     "npm-run-all": "^4.1.5",
     "prettier": "1.16.4",
     "pretty-quick": "^1.10.0",
@@ -30,7 +31,9 @@
     "build:counterV2": "rollup -c --environment folder:counterV2",
     "start": "rollup -c rollup.dev.config.js --watch",
     "prettier:check": "prettier --check \"counter/**/*.js\"",
-    "prettier:fix": "prettier --write \"counter/**/*.js\""
+    "prettier:fix": "prettier --write \"counter/**/*.js\"",
+    "test:covage": "jest --coverage",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
