--- a/build-web-component/package.json
+++ b/build-web-component/package.json
@@ -13,6 +13,7 @@
     "@babel/preset-env": "^7.3.4",
     "husky": "^1.3.1",
     "jest": "^24.3.1",
+    "lit-element": "^2.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "1.16.4",
     "pretty-quick": "^1.10.0",
