--- a/build-web-component/package.json
+++ b/build-web-component/package.json
@@ -32,6 +32,7 @@
     "build:boStringConcat": "rollup -c --environment folder:bo-string-concat",
     "build:boObjMerge": "rollup -c --environment folder:bo-obj-merge",
     "build:boSwitchConfig": "rollup -c --environment folder:bo-switch-config",
+    "build:boExpandedSelect": "rollup -c --environment folder:bo-expanded-select",
     "start": "rollup -c rollup.dev.config.js --watch",
     "prettier:check": "prettier --check \"counter/**/*.js\"",
     "prettier:fix": "prettier --write \"counter/**/*.js\"",
